# CPP_image_filters

./: CMakeLists.txt  README.md
include/: App.h  Filter.h  FlipFilter.h  GrayFilter.h  Image.h  ImageLoader.h  ImageProcessor.h  Pixel.h  RotateFilter.h  Saver.h  SaverPNG.h  SaverPPM.h  SepiaFilter.h  png_utils.h
src/: App.cpp  FlipFilter.cpp  GrayFilter.cpp  Image.cpp  ImageProcessor.cpp  Imageloader.cpp  Pixel.cpp  RotateFilter.cpp  SaverPNG.cpp  SaverPPM.cpp  SepiaFilter.cpp  main.cpp  png_utils.cpp
